Add code block with lowlight
Signed-off-by: Ilya Amelevich <ilya.amelevich@gmail.com>

--- a/admin/src/translations/en.json
+++ b/admin/src/translations/en.json
@@ -58,6 +58,7 @@
   "editor.toolbar.orderedList": "Ordered List",
   "editor.toolbar.blockquote": "Blockquote",
   "editor.toolbar.codeBlock": "Code Block",
+  "editor.toolbar.codeLanguage": "Choose language",
   "editor.toolbar.clearFormatting": "Clear Formatting",
   "editor.toolbar.clearNode": "Clear Node",
   "editor.toolbar.horizontalRule": "Horizontal Rule",
